# DeepLearningForBela

./: CMakeLists.txt  README.md  Toolchain.cmake
DL4Bela/lib/NNLib/: ArmNNFrontend.cpp  CMakeLists.txt  PytorchFrontend.cpp  RTNeuralFrontend.cpp  TFLiteFrontend.cpp
DL4Bela/lib/NNLib/include/: ArmNNFrontend.h  BaseNN.h  PytorchFrontend.h  RTNeuralFrontend.h  TFLiteFrontend.h
DL4Bela/lib/Utils/: CMakeLists.txt
DL4Bela/lib/Utils/include/: Log.h  Utils.h
DL4Bela/samples/benchmark/: CMakeLists.txt  main.cpp
DL4Bela/samples/keyword/: CMakeLists.txt  MFCCTransform.cpp  MFCCTransform.h  main.cpp  render.cpp
DL4Bela/samples/linear/: AppOptions.h  CMakeLists.txt  main.cpp  render.cpp
DL4Bela/samples/wavetable/: AppOptions.h  CMakeLists.txt  Wavetable.cpp  Wavetable.h  main.cpp  render.cpp
cmake/Modules/: FindTfLite.cmake.back  FindTfLite.cmake.xnnpack
python/: convert_onnx_tflite.py  mlp_pytorch.py  mlp_tf.py  siren_pytorch.py
python/siren/: check_tflite.py  siren_pytorch.py
